After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 677867 - [PATCH] Fix GCC error
[PATCH] Fix GCC error
Status: RESOLVED FIXED
Product: evince
Classification: Core
Component: general
unspecified
Other All
: Normal normal
: ---
Assigned To: Evince Maintainers
Evince Maintainers
Depends on:
Blocks:
 
 
Reported: 2012-06-11 15:26 UTC by Cosimo Cecchi
Modified: 2012-06-11 17:04 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Fix GCC error (923 bytes, patch)
2012-06-11 15:26 UTC, Cosimo Cecchi
committed Details | Review

Description Cosimo Cecchi 2012-06-11 15:26:29 UTC
See attached patch.
Comment 1 Cosimo Cecchi 2012-06-11 15:26:31 UTC
Created attachment 216124 [details] [review]
Fix GCC error

In case we don't have a recent enough poppler, return the enum value
instead of zero, or GCC will complain about immplcitly casting an int to
an enum.
Comment 2 Carlos Garcia Campos 2012-06-11 16:24:02 UTC
Review of attachment 216124 [details] [review]:

hmm, stupid C++, thanks Cosimo, feel free to push it.
Comment 3 Cosimo Cecchi 2012-06-11 17:04:04 UTC
Attachment 216124 [details] pushed as f441290 - Fix GCC error

Thanks, pushed!