Fix GCC error

In case we don't have a recent enough poppler, return the enum value
instead of zero, or GCC will complain about immplcitly casting an int to
an enum.

https://bugzilla.gnome.org/show_bug.cgi?id=677867